--- a/packages/clay-css/src/scss/variables/_menubar.scss
+++ b/packages/clay-css/src/scss/variables/_menubar.scss
@@ -14,6 +14,9 @@ $menubar-vertical-expand-md: map-deep-merge(
 			),
 		collapse-z-index-mobile:
 			$zindex-menubar-vertical-expand-md-collapse-mobile,
+		nav-nested-margins-item-mobile: (
+			margin-left: 0,
+		),
 	),
 	$menubar-vertical-expand-md
 );
@@ -93,6 +96,9 @@ $menubar-vertical-expand-lg: map-deep-merge(
 			),
 		collapse-z-index-mobile:
 			$zindex-menubar-vertical-expand-lg-collapse-mobile,
+		nav-nested-margins-item-mobile: (
+			margin-left: 0,
+		),
 	),
 	$menubar-vertical-expand-lg
 );
